# EndoDenoise

./: .clang-format  .gitignore  CMakeLists.txt  CMakePresets.json
include/filters/: deep_denoiser.cuh  optical_flow_blending.cuh  spatiotemporal_bilateral_filter.cuh  temporal_median_filter.cuh
models/: export_onnx.py  model.onnx  model.pth  requirements.txt  train.py
src/: main.cpp
src/filters/: deep_denoiser.cu  optical_flow_blending.cu  spatiotemporal_bilateral_filter.cu  temporal_median_filter.cu
